--- a/LowerDeck Engine/LowerDeck Engine.vcxproj
+++ b/LowerDeck Engine/LowerDeck Engine.vcxproj
@@ -100,9 +100,6 @@
   <ItemGroup>
     <ClCompile Include="Engine\D3D\D3D12Adapter.cpp" />
     <ClCompile Include="Engine\D3D\D3D12Buffer.cpp" />
-    <ClCompile Include="Engine\D3D\D3D12Memory.cpp" />
-    <ClCompile Include="Engine\D3D\D3D12PipelineState.cpp" />
-    <ClCompile Include="Engine\D3D\D3D12Texture.cpp" />
     <ClCompile Include="Engine\Graphics\Buffer\Buffer.cpp" />
     <ClCompile Include="Engine\Graphics\Buffer\BufferUtility.cpp" />
     <ClCompile Include="Engine\Graphics\MipMapGenerator.cpp" />
@@ -143,13 +140,7 @@
     <ClCompile Include="Engine\Render\Lights\PointLights.cpp" />
     <ClCompile Include="Engine\Render\Model\Importer.cpp" />
     <ClCompile Include="Engine\Render\Model\Model.cpp" />
-    <ClCompile Include="Engine\Render\RenderPass\GBufferPass.cpp" />
-    <ClCompile Include="Engine\Render\RenderPass\LightPass.cpp" />
-    <ClCompile Include="Engine\Render\ScreenOutput.cpp" />
-    <ClCompile Include="Engine\Scene\GameObject.cpp" />
     <ClCompile Include="Engine\Utility\FileSystem.cpp" />
-    <ClCompile Include="Engine\Utility\Math.cpp" />
-    <ClCompile Include="Engine\Utility\Utility.cpp" />
     <ClCompile Include="Engine\Window\Window.cpp" />
     <ClCompile Include="Dependencies\ImGui\imgui.cpp">
       <GenerateXMLDocumentationFiles Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</GenerateXMLDocumentationFiles>
@@ -173,17 +164,12 @@
     <ClInclude Include="Engine\D3D\D3D12Adapter.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Buffer.hpp" />
     <ClInclude Include="Dependencies\EnTT\entt.hpp" />
-    <ClInclude Include="Engine\D3D\D3D12Memory.hpp" />
-    <ClInclude Include="Engine\D3D\D3D12PipelineState.hpp" />
-    <ClInclude Include="Engine\D3D\D3D12Texture.hpp" />
     <ClInclude Include="Engine\ECS\Entity.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\Buffer.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\BufferUtility.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\ConstantBuffer.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\ConstantTypes.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\Vertex.hpp" />
-    <ClInclude Include="Engine\Graphics\MipMapGenerator.hpp" />
-    <ClInclude Include="Engine\Graphics\Shader.hpp" />
     <ClInclude Include="Engine\Render\Deferred\DeferredContext.hpp" />
     <ClInclude Include="Engine\D3D\D3D12DepthBuffer.hpp" />
     <ClInclude Include="Engine\D3D\D3D12RootSignature.hpp" />
@@ -215,10 +201,6 @@
     <ClInclude Include="Engine\Render\Model\Mesh.hpp" />
     <ClInclude Include="Engine\Render\Model\Meshlet.hpp" />
     <ClInclude Include="Engine\Render\Model\Model.hpp" />
-    <ClInclude Include="Engine\Render\RenderPass\GBufferPass.hpp" />
-    <ClInclude Include="Engine\Render\RenderPass\LightPass.hpp" />
-    <ClInclude Include="Engine\Render\ScreenOutput.hpp" />
-    <ClInclude Include="Engine\Scene\GameObject.hpp" />
     <ClInclude Include="Engine\Utility\FileSystem.hpp" />
     <ClInclude Include="Engine\Utility\Math.hpp" />
     <ClInclude Include="Engine\Utility\MemoryUsage.hpp" />
@@ -325,4 +307,14 @@
     </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
+  <ImportGroup Label="ExtensionTargets">
+    <Import Project="..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets" Condition="Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets')" />
+  </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props'))" />
+    <Error Condition="!Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets'))" />
+  </Target>
 </Project>
